2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(computeCurrencies): Build two hashtables to store translated
	currencies in LocaleInformation.
	(computeContents): Call computeCurrencies.

	* src/gnu/ldml/Parser.java
	(Parser): Added new parse element to interpret currencies.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(classpathZoneOrder): Fixed order of entries.
	(TimeZoneContent.generateContent): Fixed array generation.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java (computeLocalNames):
	Generate data for localized variant names.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(computeLocalNames): Generate Hashtable for language names.

2004-12-22  Chris Burdess  <dog@gnu.org>

	* src/gnu/ldml/Analyzer.java: Do not specify validSubLocales explicitly.
	* src/gnu/localegen/JavaGenerator.java: Generate
	LocaleInformation.java from root locale.

2004-12-22  Chris Burdess  <dog@gnu.org>

	* src/gnu/ldml/Analyzer.java,src/gnu/ldml/Parser.java: Permit
	multiple locales per parser.
	* src/gnu/localegen/JavaGenerator.java,src/gnu/localegen/Main.java:
	Assign collations and locales to individual JavaGenerators. Fix
	strings generated over multiple lines.

2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java:
	(convertToJavaString): Espace '"' using '\"' instead of '\uXXXX'
	because jikes has some problem with it.

2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>
	
	* src/gnu/localegen/JavaGenerator.java
	(StringContent): Do not convert to escaped strings as it is done
	afterward.

2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(generateContents): Keep the comma at the end of the
	array. Convert the data string into an escaped string.
	(ManualListContent.generateContent): Likewise.
	(TimeZoneContent.generateContent): Likewise.